--- a/LWJGL2/.classpath
+++ b/LWJGL2/.classpath
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/lwjgl-2.9.3/jar/lwjgl.jar" sourcepath="lib/lwjgl-2.9.3/lwjgl-source-2.9.3.zip">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/ZanLibrary2/lib/lwjgl-2.9.3/doc/lwjgl-docs-2.9.3.zip!/"/>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="ZanLibrary2/lib/lwjgl-2.9.3/native/windows"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="ZanLibraryLWJGL2/lib/lwjgl-2.9.3/native/windows"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/audio/SoundSystem/SoundSystem.jar"/>
